# vvpx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TEMP_PLAN.md
.github/workflows/: build.yml
cmake/: VpxAssembly.cmake  VpxConfig.cmake  VpxSources.cmake  VpxSourcesArm.cmake  VpxSourcesArmNeon.cmake
config/linux_x64/: vpx_config.asm
config/macos_arm64/: vp8_rtcd.h  vp9_rtcd.h  vpx_config.h  vpx_dsp_rtcd.h  vpx_scale_rtcd.h
config/macos_arm64_neon/: vp8_rtcd.h  vp9_rtcd.h  vpx_config.h  vpx_dsp_rtcd.h
config/win_x64/: vpx_config.asm  vpx_config.h
libvpx_neon_build_final/: config.mk  examples-arm64-darwin20-gcc.mk  vpx_config.c  vpx_config.h
libvpx_neon_build_final/build_arm64/: args.c.d  ivfdec.c.d  ivfenc.c.d  md5_utils.c.d  rate_hist.c.d  tools_common.c.d  video_reader.c.d  video_writer.c.d  vpx_config.c.d  vpxdec.c.d  vpxenc.c.d  vpxstats.c.d  warnings.c.d  webmdec.cc.d  webmenc.cc.d  y4menc.c.d  y4minput.c.d
libvpx_neon_build_final/build_arm64/examples/: decode_to_md5.c.d  decode_with_drops.c.d  postproc.c.d  set_maps.c.d  simple_decoder.c.d  simple_encoder.c.d  svc_encodeframe.c.d  twopass_encoder.c.d  vp8cx_set_ref.c.d  vp9_lossless_encoder.c.d  vp9_spatial_svc_encoder.c.d  vp9cx_set_ref.c.d  vpx_temporal_svc_encoder.c.d
libvpx_neon_build_final/build_arm64/vp8/: vp8_cx_iface.c.d  vp8_dx_iface.c.d  vp8_ratectrl_rtc.cc.d
libvpx_neon_build_final/build_arm64/vp8/common/: alloccommon.c.d  blockd.c.d  dequantize.c.d  entropy.c.d  entropymode.c.d  entropymv.c.d  extend.c.d  filter.c.d  findnearmv.c.d  idct_blk.c.d  idctllm.c.d  loopfilter_filters.c.d  mbpitch.c.d  mfqe.c.d  modecont.c.d  postproc.c.d  quant_common.c.d  reconinter.c.d  reconintra.c.d  reconintra4x4.c.d  rtcd.c.d  setupintrarecon.c.d  swapyv12buffer.c.d  treecoder.c.d  vp8_loopfilter.c.d  vp8_skin_detection.c.d
libvpx_neon_build_final/build_arm64/vp8/decoder/: dboolhuff.c.d  decodeframe.c.d  decodemv.c.d  detokenize.c.d  onyxd_if.c.d  threading.c.d
libvpx_neon_build_final/build_arm64/vp8/encoder/: bitstream.c.d  boolhuff.c.d  copy_c.c.d  dct.c.d  denoising.c.d  encodeframe.c.d  encodeintra.c.d  encodemb.c.d  encodemv.c.d  ethreading.c.d  firstpass.c.d  lookahead.c.d  mcomp.c.d  modecosts.c.d  onyx_if.c.d  pickinter.c.d  picklpf.c.d  ratectrl.c.d  rdopt.c.d  segmentation.c.d  temporal_filter.c.d  tokenize.c.d  treewriter.c.d  vp8_quantize.c.d
libvpx_neon_build_final/build_arm64/vp9/: ratectrl_rtc.cc.d  vp9_cx_iface.c.d  vp9_dx_iface.c.d  vp9_iface_common.c.d
libvpx_neon_build_final/build_arm64/vp9/common/: vp9_alloccommon.c.d  vp9_blockd.c.d  vp9_common_data.c.d  vp9_entropy.c.d  vp9_entropymode.c.d  vp9_entropymv.c.d  vp9_filter.c.d  vp9_frame_buffers.c.d  vp9_idct.c.d  vp9_loopfilter.c.d  vp9_mfqe.c.d  vp9_mvref_common.c.d  vp9_postproc.c.d  vp9_pred_common.c.d  vp9_quant_common.c.d  vp9_reconinter.c.d  vp9_reconintra.c.d  vp9_rtcd.c.d  vp9_scale.c.d  vp9_scan.c.d  vp9_seg_common.c.d  vp9_thread_common.c.d  vp9_tile_common.c.d
libvpx_neon_build_final/build_arm64/vp9/decoder/: vp9_decodeframe.c.d  vp9_decodemv.c.d  vp9_decoder.c.d  vp9_detokenize.c.d  vp9_dsubexp.c.d  vp9_job_queue.c.d
libvpx_neon_build_final/build_arm64/vp9/encoder/: vp9_alt_ref_aq.c.d  vp9_aq_360.c.d  vp9_aq_complexity.c.d  vp9_aq_cyclicrefresh.c.d  vp9_aq_variance.c.d  vp9_bitstream.c.d  vp9_context_tree.c.d  vp9_cost.c.d  vp9_dct.c.d  vp9_encodeframe.c.d  vp9_encodemb.c.d  vp9_encodemv.c.d  vp9_encoder.c.d  vp9_ethread.c.d  vp9_ext_ratectrl.c.d  vp9_extend.c.d  vp9_firstpass.c.d  vp9_frame_scale.c.d  vp9_lookahead.c.d  vp9_mbgraph.c.d  vp9_mcomp.c.d  vp9_multi_thread.c.d  vp9_noise_estimate.c.d  vp9_picklpf.c.d  vp9_pickmode.c.d  vp9_quantize.c.d  vp9_ratectrl.c.d  vp9_rd.c.d  vp9_rdopt.c.d  vp9_resize.c.d  vp9_segmentation.c.d  vp9_skin_detection.c.d  vp9_speed_features.c.d  vp9_subexp.c.d  vp9_svc_layercontext.c.d  vp9_temporal_filter.c.d  vp9_tokenize.c.d  vp9_tpl_model.c.d  vp9_treewriter.c.d
libvpx_neon_build_final/build_arm64/vpx/src/: vpx_codec.c.d  vpx_decoder.c.d  vpx_encoder.c.d  vpx_image.c.d
libvpx_neon_build_final/build_arm64/vpx_dsp/: add_noise.c.d  avg.c.d  bitreader.c.d  bitreader_buffer.c.d  bitwriter.c.d  bitwriter_buffer.c.d  deblock.c.d  fwd_txfm.c.d  intrapred.c.d  inv_txfm.c.d  loopfilter.c.d  prob.c.d  psnr.c.d  quantize.c.d  sad.c.d  skin_detection.c.d  sse.c.d  subtract.c.d  sum_squares.c.d  variance.c.d  vpx_convolve.c.d  vpx_dsp_rtcd.c.d
libvpx_neon_build_final/build_arm64/vpx_dsp/arm/: avg_neon.c.d  avg_pred_neon.c.d  deblock_neon.c.d  fdct16x16_neon.c.d  fdct32x32_neon.c.d  fdct4x4_neon.c.d  fdct8x8_neon.c.d  fdct_partial_neon.c.d  hadamard_neon.c.d  highbd_avg_neon.c.d  highbd_avg_pred_neon.c.d  highbd_hadamard_neon.c.d  highbd_idct16x16_add_neon.c.d  highbd_idct32x32_1024_add_neon.c.d  highbd_idct32x32_135_add_neon.c.d  highbd_idct32x32_34_add_neon.c.d  highbd_idct32x32_add_neon.c.d  highbd_idct4x4_add_neon.c.d  highbd_idct8x8_add_neon.c.d  highbd_intrapred_neon.c.d  highbd_loopfilter_neon.c.d  highbd_quantize_neon.c.d  highbd_sad4d_neon.c.d  highbd_sad_neon.c.d  highbd_sse_neon.c.d  highbd_subpel_variance_neon.c.d  highbd_variance_neon.c.d  highbd_variance_neon_dotprod.c.d  highbd_variance_sve.c.d  highbd_vpx_convolve8_neon.c.d  highbd_vpx_convolve8_sve.c.d  highbd_vpx_convolve8_sve2.c.d  highbd_vpx_convolve_avg_neon.c.d  highbd_vpx_convolve_copy_neon.c.d  idct16x16_1_add_neon.c.d  idct16x16_add_neon.c.d  idct32x32_135_add_neon.c.d  idct32x32_1_add_neon.c.d  idct32x32_34_add_neon.c.d  idct32x32_add_neon.c.d  (+26 more)
libvpx_neon_build_final/build_arm64/vpx_mem/: vpx_mem.c.d
libvpx_neon_build_final/build_arm64/vpx_ports/: aarch64_cpudetect.c.d
libvpx_neon_build_final/build_arm64/vpx_scale/: vpx_scale_rtcd.c.d
libvpx_neon_build_final/build_arm64/vpx_scale/generic/: gen_scalers.c.d  vpx_scale.c.d  (+2 more)
libvpx_neon_build_final/build_arm64/vpx_util/: vpx_thread.c.d  vpx_write_yuv_frame.c.d
scripts/: extract_sources.py  gen_rtcd_arm.py
test/: CMakeLists.txt  decode_test.c  ivf_format_test.c  ivf_read_test.c  version_test.c
test/build_standalone/: ivf_format_test.slnx
(+34 files in other folders)
